--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-diamond"></span></div>
 							<h2>Robert Williams</h2>
-							<p>Aspiring Programer and Open Source Enthusiast</p>
+							<p>Aspiring 3D animator. A little bit of everything.</p>
 						</div>
 					</section>
 
