--- a/projects.html
+++ b/projects.html
@@ -63,16 +63,16 @@
 											<a href="https://retropie.org.uk/" class="special">Directions</a>
 										</article>
                                         <article>
-											<a href="#" class="image"><img src="images/coming%20soon.png" alt="" /></a>
-											<h3 class="major">More Projects coming soon</h3>
-											<p></p>
-											<a href="#" class="special">Learn more</a>
+											<a href="#" class="image"><img src="images/yelpcamp.png" alt="" /></a>
+											<h3 class="major">Yelp Camp</h3>
+											<p>Node based website were users can create and review campgrounds. Uses Node.js, MongoDB, and Bootstrap</p>
+											<a href="https://github.com/robertwilliams21040/YelpCamp" class="special">Github Link</a>
 										</article>
                                         <article>
-											<a href="#" class="image"><img src="images/coming%20soon.png" alt="" /></a>
-											<h3 class="major">More Projects coming soon</h3>
-											<p></p>
-											<a href="#" class="special">Learn more</a>
+											<a href="#" class="image"><img src="images/limits.PNG" alt="" /></a>
+											<h3 class="major">Mathmatics</h3>
+											<p>My personal web-based notes for relearning mathmatics starting with Calc.</p>
+											<a href="https://github.com/robertwilliams21040/Mathmatics" class="special">Github link</a>
 										</article>
                                         
 									</section>
