updating other catagory

--- a/other.html
+++ b/other.html
@@ -35,7 +35,7 @@
 						<header>
 							<div class="inner">
 								<h2>Other</h2>
-								<p>COMING SOON</p>
+								<p>Random Projects that might later get their own catagory.</p>
 							</div>
 						</header>
 
